# shogi-camera-server

./: .gitignore  clip_dataset.py  main.py  pyproject.toml  setup.cfg
.github/: pull_request_template.md
classify_shogi_piece/: main.py
classify_shogi_piece/train/: main.py
firebase/: db_operate.py
generate_kifu/: main.py
my_types/: __init__.py  main.py
predict_board/: clip_squares.py  corners.py  main.py
server/: pyproject.toml  tox.ini
server/my_types/: main.py
